--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="style.css">
     <body>
         <main>
-            <h1 class="company">Travsys</h1>
+            <h1 class="company">problem bro</h1>
             <br>
             <p> For networking solutions</p>
 
